Some important FTI code has been hanging out in my working copy. Checking it in now. Includes a real bona fide unit test of FTI functionality simulating a transient error for a document.